--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,16 @@
 canvas {
 	width: 100%;
 	height: 100%;
-	background-color: white;
+	background-color: black;
 }
 
 body, html {
 	height: 100%;
-	margin: 0;
+    margin: 0;
+    overflow: hidden;
+}
+
+canvas[resize] {
+    width: 100%;
+    height: 100%;
 }
